src/pages/Sponsors.scss
@import '../index.scss';

.members {
  gap: 2rem;
  .member {
    border-bottom: 0.66rem $primary solid;
    width: 22rem;
    height: 18rem;
    gap: 1rem;
    margin-bottom: 0;
    img {
      max-width: 100%;
      height: 8rem;
      object-fit: contain;
    }
  }
}

.sponsors {
  h1{
    text-align: center;
    color: white !important;
  }

  .header{
    background-color: #dddddd;
    background-image:url("../assets/SCDI.jpg");
    /* Add the blur effect
    filter: blur(8px);
    -webkit-filter: blur(8px); */

    /* Full height */
    height: 100%;

    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
  .title-ab{
    height: 500px;
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0, 0.6); /* Black w/opacity/see-through */
    font-size: 5rem !important;
    font-weight: 600;
    line-height: 1.125;
  }
}

